<resources>
    <string name="app_name">Força de Vendas</string>
    <string name="erro_login">Erro ao autenticar: </string>
    <string name="tela_cadastrar_usuario">Cadastrar usuário</string>
    <string name="tela_cadastrar_cliente">Cadastrar cliente</string>
    <string name="tela_cadastrar_forma_pgto">Nova forma de pagamento</string>
    <string name="tela_cadastrar_produto">Cadastrar produto</string>
    <string name="tela_cadastrar_pedido">Cadastrar pedido</string>
    <string name="tela_lista_cliente">Lista de clientes</string>
    <string name="itens_do_pedido">Itens do pedido</string>
    <string name="adicionar">Adicionar</string>
    <string name="novo">Novo</string>
    <string name="cliente">Cliente</string>
    <string name="forma_de_pagamento">Forma de Pagamento</string>
    <string name="tela_lista_produto">Lista de produtos</string>
    <string name="tela_lista_formapgto">Formas de pagamento</string>
    <string name="title_activity_principal2">Principal2Activity</string>
    <string name="navigation_drawer_open"></string>
    <string name="navigation_drawer_close"></string>
    <string name="hint_nome_produto">Nome do produto</string>
    <string name="hint_preco_produto">Preço</string>
    <string name="hint_forma_pgto">Forma de pagamento</string>
    <string name="hint_nome_cliente">Nome(*)</string>
    <string name="hint_email_cliente">E-mail(*)</string>
    <string name="hint_cep_cliente">CEP</string>
    <string name="hint_rua_cliente">Rua(*)</string>
    <string name="hint_numero_rua_cliente">Nº rua</string>
    <string name="hint_complemento_endereco_cliente">Complemento</string>
    <string name="hint_referencia_endereco_cliente">Ponto de referência(*)</string>
    <string name="hint_telefone_cliente">Telefone(*)</string>
    <string name="hint_senha_email">Senha</string>
    <string name="hint__repita_senha_email">Repita a senha</string>
    <string name="tela_reset_senha_usuario">Esqueci a senha</string>
    <string name="info_reset_senha">Um link será enviado para seu e-mail para que você defina sua nova senha.</string>
    <string name="nome_cliente_vazio">Informe o nome</string>
    <string name="email_invalido">"O e-mail informado é inválido."</string>
    <string name="email_ja_sendo_usado">Esse e-mail já está sendo usado por outro usuário.</string>
    <string name="senha_insegura">A senha informada não é uma senha segura.</string>
    <string name="cadastro_usuario_falha">O cadastro do usuário falhou:</string>
    <string name="erro_envio_email">Erro ao enviar e-mail:</string>
    <string name="conta_inexistente">Nenhuma conta vinculada ao e-mail informado.</string>
    <string name="informe_email">Informe o email</string>
    <string name="informe_senha">Informe a sua senha</string>
    <string name="hint_senha_antiga_email">Digite a senha atual</string>
    <string name="hint_repita_nova_senha_email">Repita a nova senha</string>
    <string name="hint_nova_senha_email">Informe a nova senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="cadastrar_cliente">Cadastrar cliente</string>
    <string name="verificar_conexao">Verifique sua conexão com a internet.</string>
    <string name="verificar_dados_informados">Verifique os dados informados</string>
    <string name="email_cliente_vazio">Informe o e-mail do cliente.</string>
    <string name="rua_cliente_vazio">Informe a rua do cliente.</string>
    <string name="referencia_cliente_vazio">Informe uma referência.</string>
    <string name="telefone_cliente_vazio">Informe o telefone do cliente.</string>
    <string name="cliente_cadastrado_sucesso">Cliente cadastrado com sucesso.</string>
    <string name="cadastrar_forma_pgto">Cadastrar forma de pagamento</string>
    <string name="erro_salvar_dados">Erro ao salvar os dados.</string>
    <string name="nome_formaPgto_vazio">Informe o nome da forma de pagamento.</string>
    <string name="cadastrar_produto">Cadastrar produto</string>
    <string name="nome_produto_vazio">Informe o nome do produto.</string>
    <string name="preco_produto_vazio">Informe o preço do produto</string>
    <string name="descricao_produto_vazio">Informe a descrição do produto.</string>
    <string name="hint_descricao_produto">Descrição do produto</string>
    <string name="perfil_alterado_sucesso">Perfil alterado com sucesso.</string>
    <string name="alterar_cliente">Alterar cliente</string>
    <string name="alterar_forma_pgto">Alterar forma de pagamento</string>
    <string name="alterar_produto">Alterar produto</string>
    <string name="resumo_pedido">Resumo do pedido</string>
    <string name="selecione_forma_pgto">Selecione uma forma de pagamento.</string>
    <string name="cancelar_pedido">Cancelar pedido</string>
    <string name="fechar">Fechar</string>
    <string name="voltar">VOLTAR</string>
    <string name="cancelarPedido">CANCELAR</string>
</resources>
