<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_cadastro_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.forcavenda.Telas.Cadastros.CadastroPedidoActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/lbl_cliente"
            android:layout_above="@+id/grb_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cliente" />

        <RelativeLayout
            android:id="@+id/grb_cliente"
             android:layout_below="@+id/lbl_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/txt_cliente"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/btn_adicionar"
                android:layout_toStartOf="@+id/btn_adicionar"
                android:background="@color/Branco" />

            <Button
                android:id="@+id/btn_adicionar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txt_cliente"
                android:layout_alignBottom="@+id/txt_cliente"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end|top"
                android:text="@string/novo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/lbl_formaPgto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forma_de_pagamento" />

        <Spinner
            android:id="@+id/cboFormapgto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@android:drawable/btn_dropdown" />

        <TextView
            android:id="@+id/lbl_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itens_do_pedido"

            android:layout_alignTop="@+id/btn_adicionar_item"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@+id/lista_item"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <AutoCompleteTextView
                android:id="@+id/txt_item"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/btn_adicionar_item"
                android:layout_toStartOf="@+id/btn_adicionar_item"
                android:background="@color/Branco" />

            <Button
                android:id="@+id/btn_adicionar_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txt_item"
                android:layout_alignBottom="@+id/txt_item"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end|top"
                android:text="@string/adicionar" />

        </RelativeLayout>

        <ListView

            android:id="@+id/lista_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cboFormapgto"></ListView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="visible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/linear1"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_done_white_24dp"
        app:backgroundTint="@android:color/holo_blue_light">
    </android.support.design.widget.FloatingActionButton>

</android.support.design.widget.CoordinatorLayout>
